# mcp-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OWNERS  PROGRESS.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml  good_first_issue.yaml
.github/workflows/: check-pr-title.yaml  dco.yaml  docker.yaml  docs.yaml  lint.yaml  publish.yaml  test-python.yaml  test.yaml  welcome-new-contributors.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: agents.rst  core.rst  tools.rst
docs/source/development/: architecture.rst  contributing.rst
docs/source/getting-started/: configuration.rst  index.rst  installation.rst  quickstart.rst
docs/source/guide/: agents.rst  prompts.rst  resources.rst  tools.rst  troubleshooting.rst
examples/: README.md  claude-desktop-config.json  cursor-mcp-config.json  kf-mcp-policy.yaml  kubeflow-mcp.yaml  mnist_train.py
kubeflow_mcp/: __init__.py  cli.py  cli_test.py
kubeflow_mcp/common/: __init__.py
kubeflow_mcp/core/: __init__.py
kubeflow_mcp/hub/: __init__.py
kubeflow_mcp/optimizer/: __init__.py
kubeflow_mcp/trainer/: __init__.py
kubeflow_mcp/trainer/api/: __init__.py
scripts/: update_progress.py
skills/hub/: SKILL.md
skills/optimizer/: SKILL.md
skills/trainer/: SKILL.md  custom-training.md  fine-tuning.md  troubleshooting.md
src/kubeflow_mcp/: __init__.py  __main__.py  cli.py
src/kubeflow_mcp/agents/: __init__.py  dynamic_tools.py  mcp_client.py  ollama.py
src/kubeflow_mcp/common/: __init__.py  constants.py  types.py  utils.py
src/kubeflow_mcp/core/: __init__.py  auth.py  config.py  health.py  logging.py  policy.py  prompts.py  resilience.py  resources.py  security.py  server.py
src/kubeflow_mcp/hub/: __init__.py
src/kubeflow_mcp/hub/api/: __init__.py
src/kubeflow_mcp/optimizer/: __init__.py
src/kubeflow_mcp/optimizer/api/: __init__.py
src/kubeflow_mcp/trainer/: __init__.py
src/kubeflow_mcp/trainer/api/: __init__.py  discovery.py  lifecycle.py  monitoring.py  planning.py  training.py
src/kubeflow_mcp/trainer/constants/: __init__.py
src/kubeflow_mcp/trainer/types/: __init__.py
tests/: __init__.py  conftest.py
tests/benchmarks/: conftest.py  test_latency.py  test_profiling.py  test_report.py  test_token_usage.py
tests/benchmarks/results/: benchmark_report_latest.json
tests/unit/: test_cli.py  test_policy.py  test_resilience.py  test_security.py  test_server.py  test_types.py
tests/unit/trainer/: test_discovery.py  test_lifecycle.py  test_monitoring.py  test_planning.py  test_sdk_contracts.py  test_training.py
